--- a/local_rmd_nbooks/m22_raw_integration_asex.Rmd
+++ b/local_rmd_nbooks/m22_raw_integration_asex.Rmd
@@ -279,13 +279,126 @@ gogo()
 
 ```
 
-```{r}
+
+```{r, eval=T}
+# bsub < /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code_lnk/bash_scripts/submsn_intgrtn_pc_harmony_bsub.sh
+
+```
+
+
+
+```{r, warning=FALSE, message=FALSE}
+# v3_m2_asex_cr_filt_norm_harmony <- readRDS("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_norm_harmony.RDS")
+v3_m2_asex_cr_filt_norm_harmony <- readRDS("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_norm_harmony_pc_man.RDS")
+
+### 1. Run on asexuals after QC with PC specified manually
+# --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/v3_m2_asex_cr_filt_norm.RDS" \ 
+# --mthd_nm "harmony_pc_man" --cluster_resoln 0.4 --intgrtn_pc 6 --integrtd_pc_man "yes" \
+# --ncores "10" --mem "100 GB" --run_time="1.hour"
+
+```
+
+```{r, warning=FALSE, message=FALSE}
+v3_m2_asex_cr_filt_norm_harmony_elbo <- readRDS("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_norm_harmony_elbo.RDS")
+v3_m2_asex_cr_filt_norm_harmony_elbo
+```
+
+
+```{r, warning=FALSE, message=FALSE}
+DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "integrated.harmony_pc_man")
+DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "umap.harmony_pc_man")
+DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, group.by = "stage", reduction = "umap.harmony_pc_man") + scale_color_manual(values = sp_fld_colors)
+DimPlot(v3_m2_asex_cr_filt_norm_harmony, group.by = "donor", reduction = "umap.harmony_pc_man")
+FeaturePlot(v3_m2_asex_cr_filt_norm_harmony, features = "nFeature_RNA", reduction = "umap.harmony_pc_man")
+FeaturePlot(v3_m2_asex_cr_filt_norm_harmony, features = "nCount_RNA", reduction = "umap.harmony_pc_man")
+# VlnPlot(v3_m2_asex_cr_filt_norm_harmony, features = "nCount_RNA", group.by = "seurat_clusters", reduction = "umap.harmony_pc_man")
+
+```
+
+
+```{r, warning=FALSE, message=FALSE}
+DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, group.by = "stage", reduction = "umap.harmony_pc_man") + scale_color_manual(values = sp_col_new)
+
+```
+
+```{r, warning=FALSE, message=FALSE, fig.width= 15, fig.height=4}
+DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, split.by = "stage", reduction = "umap.harmony_pc_man", pt.size = 0.0001) 
+
+```
+
+```{r, warning=FALSE, message=FALSE, fig.width=12, fig.height=3}
+DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "umap.harmony_pc_man", split.by = 'donor')
+
+```
+
+```{r, warning=FALSE, message=FALSE, eval=T}
+# Display the combined datasets as an interactive 3D plot
+
+plot_ly(data = data.frame(v3_m2_asex_cr_filt_norm_harmony@reductions[["umap.harmony_pc_man"]]@cell.embeddings),
+        x = ~umapharmonypcman_1, y = ~umapharmonypcman_2, z = ~umapharmonypcman_3,
+        color= v3_m2_asex_cr_filt_norm_harmony@meta.data$sR_fine_stg,
+        # colors = c('blue', 'red'),
+        opacity = 0.8,
+        size = 0.1, 
+        type = 'scatter3d'
+)
+
+```
+
+
+############# START find all markers to test for merozoites #############
+
+```{r, warning=FALSE, message=FALSE}
+DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "umap.harmony_pc_man", group.by = "harmony_pc_man_clusters")
+
+```
+
+```{r, warning=FALSE, message=FALSE}
+DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "umap.harmony_pc_man", group.by = "harmony_pc_man_clusters", dims = c(1,3))
+
+```
+
+```{r, warning=FALSE, message=FALSE}
+DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "integrated.harmony_pc_man", group.by = "harmony_pc_man_clusters", dims = c(2,3))
+
+```
+
+
+
+```{r, warning=FALSE, message=FALSE}
+v3_m2_asex_cr_filt_norm_harmony_jnd <- JoinLayers(v3_m2_asex_cr_filt_norm_harmony)
+DefaultAssay(v3_m2_asex_cr_filt_norm_harmony_jnd)
+unique(Idents(v3_m2_asex_cr_filt_norm_harmony_jnd))
+```
+
+
+```{r, warning=FALSE, message=FALSE}
 gogo()
 ```
 
 ```{r, warning=FALSE, message=FALSE}
+rm(v3_m2_asex_cr_filt_norm_harmony)
+```
+
+
+```{r, warning=FALSE, message=FALSE}
+v3_m2_asex_cr_filt_norm_harmony_jnd_small <- v3_m2_asex_cr_filt_norm_harmony_jnd[,1:10]
+```
+
+```{r, warning=FALSE, message=FALSE}
+v3_m2_asex_cr_filt_norm_harmony_jnd_small[["RNA"]]$data <- as(v3_m2_asex_cr_filt_norm_harmony_jnd_small[["RNA"]]$data, Class = "dgCMatrix")
+```
+
+```{r, warning=FALSE, message=FALSE}
+saveRDS(v3_m2_asex_cr_filt_norm_harmony_jnd, "data/processed/Pf/m2_all/v3_m2_asex_cr_filt_norm_harmony_jnd.RDS")
+```
+
+
+####################SCT INTEGRATION alternative ####################
+
+```{r, warning=FALSE, message=FALSE}
 # split layers
-# v3_m2_asex_cr_filt[["RNA"]] <- split(v3_m2_asex_cr_filt[["RNA"]], f = v3_m2_asex_cr_filt$donor)
+v3_m2_asex_cr_filt[["RNA"]] <- split(v3_m2_asex_cr_filt[["RNA"]], f = v3_m2_asex_cr_filt$donor)
 
 ```
 
@@ -423,119 +536,6 @@ DefaultAssay(v3_m2_asex_cr_filt_sct_int) <- "SCT"
 ```
 
 
-```{r, eval=T}
-gogo()
-# bsub < /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code_lnk/bash_scripts/submsn_seu_norm_integration_bsub.sh
 
-```
+####################SCT INTEGRATION alternative ####################
 
-```{r, eval=T}
-# bsub < /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code_lnk/bash_scripts/submsn_intgrtn_pc_harmony_bsub.sh
-
-```
-
-```{r, warning=FALSE, message=FALSE}
-# v3_m2_asex_cr_filt_norm_harmony <- readRDS("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_norm_harmony.RDS")
-v3_m2_asex_cr_filt_norm_harmony <- readRDS("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_norm_harmony_pc_man.RDS")
-
-### 1. Run on asexuals after QC with PC specified manually
-# --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/v3_m2_asex_cr_filt_norm.RDS" \ 
-# --mthd_nm "harmony_pc_man" --cluster_resoln 0.4 --intgrtn_pc 6 --integrtd_pc_man "yes" \
-# --ncores "10" --mem "100 GB" --run_time="1.hour"
-
-```
-
-```{r, warning=FALSE, message=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_elbo <- readRDS("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_norm_harmony_elbo.RDS")
-v3_m2_asex_cr_filt_norm_harmony_elbo
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "integrated.harmony_pc_man")
-DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "umap.harmony_pc_man")
-DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, group.by = "stage", reduction = "umap.harmony_pc_man") + scale_color_manual(values = sp_fld_colors)
-DimPlot(v3_m2_asex_cr_filt_norm_harmony, group.by = "donor", reduction = "umap.harmony_pc_man")
-FeaturePlot(v3_m2_asex_cr_filt_norm_harmony, features = "nFeature_RNA", reduction = "umap.harmony_pc_man")
-FeaturePlot(v3_m2_asex_cr_filt_norm_harmony, features = "nCount_RNA", reduction = "umap.harmony_pc_man")
-# VlnPlot(v3_m2_asex_cr_filt_norm_harmony, features = "nCount_RNA", group.by = "seurat_clusters", reduction = "umap.harmony_pc_man")
-
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, group.by = "stage", reduction = "umap.harmony_pc_man") + scale_color_manual(values = sp_col_new)
-
-```
-
-```{r, warning=FALSE, message=FALSE, fig.width= 15, fig.height=4}
-DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, split.by = "stage", reduction = "umap.harmony_pc_man", pt.size = 0.0001) 
-
-```
-
-```{r, warning=FALSE, message=FALSE, fig.width=12, fig.height=3}
-DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "umap.harmony_pc_man", split.by = 'donor')
-
-```
-
-```{r, warning=FALSE, message=FALSE, eval=T}
-# Display the combined datasets as an interactive 3D plot
-
-plot_ly(data = data.frame(v3_m2_asex_cr_filt_norm_harmony@reductions[["umap.harmony_pc_man"]]@cell.embeddings),
-        x = ~umapharmonypcman_1, y = ~umapharmonypcman_2, z = ~umapharmonypcman_3,
-        color= v3_m2_asex_cr_filt_norm_harmony@meta.data$sR_fine_stg,
-        # colors = c('blue', 'red'),
-        opacity = 0.8,
-        size = 0.1, 
-        type = 'scatter3d'
-)
-
-```
-
-
-############# START find all markers to test for merozoites #############
-
-```{r, warning=FALSE, message=FALSE}
-DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "umap.harmony_pc_man", group.by = "harmony_pc_man_clusters")
-
-```
-
-```{r, warning=FALSE, message=FALSE}
-DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "umap.harmony_pc_man", group.by = "harmony_pc_man_clusters", dims = c(1,3))
-
-```
-
-```{r, warning=FALSE, message=FALSE}
-DimPlot(v3_m2_asex_cr_filt_norm_harmony, label = T, reduction = "integrated.harmony_pc_man", group.by = "harmony_pc_man_clusters", dims = c(2,3))
-
-```
-
-
-
-```{r, warning=FALSE, message=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_jnd <- JoinLayers(v3_m2_asex_cr_filt_norm_harmony)
-DefaultAssay(v3_m2_asex_cr_filt_norm_harmony_jnd)
-unique(Idents(v3_m2_asex_cr_filt_norm_harmony_jnd))
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-gogo()
-```
-
-```{r, warning=FALSE, message=FALSE}
-rm(v3_m2_asex_cr_filt_norm_harmony)
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_jnd_small <- v3_m2_asex_cr_filt_norm_harmony_jnd[,1:10]
-```
-
-```{r, warning=FALSE, message=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_jnd_small[["RNA"]]$data <- as(v3_m2_asex_cr_filt_norm_harmony_jnd_small[["RNA"]]$data, Class = "dgCMatrix")
-```
-
-```{r, warning=FALSE, message=FALSE}
-saveRDS(v3_m2_asex_cr_filt_norm_harmony_jnd, "data/processed/Pf/m2_all/v3_m2_asex_cr_filt_norm_harmony_jnd.RDS")
-```
